--- a/src/app/private/components/side-bar/side-bar.component.scss
+++ b/src/app/private/components/side-bar/side-bar.component.scss
@@ -1,5 +1,5 @@
 .side-menu {
-  width: 220px;
+  width: 240px;
   display: flex;
   height: 100vh;
   flex-direction: column;
@@ -7,6 +7,7 @@
   padding: 2rem;
   border-right: 1px solid #e4e4e4;
   margin: 0;
+  background-color: #fefefe;
 }
 
 .logo {
