--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@ html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
@@ -27,6 +28,26 @@ input::placeholder {
 input:focus {
   outline: 2px solid #5874df;
 }
+select {
+  appearance: none;
+  width: 25rem;
+  height: 3rem;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  outline: 1px solid #d6dae0;
+  background: url(./assets/images/selectArrow.svg) no-repeat;
+  background-position: 23rem 50%;
+  color: #b4b6c1;
+  cursor: pointer;
+}
+select:focus {
+  outline: 2px solid #5874df;
+}
+
+option {
+  color: #2c2c2c;
+}
 button {
   background-color: #0073cf;
   color: #fbf4f4;
@@ -38,4 +59,13 @@ button {
 }
 button:hover {
   background-color: #015ca7;
+}
+.errorMsg {
+  p {
+    margin: 0;
+  }
+  color: #ff4141;
+  font-size: 0.8rem;
+  border-left: 3px solid #ff4141;
+  padding-left: 1rem;
 }
