--- a/src/app/public/components/login/login.component.html
+++ b/src/app/public/components/login/login.component.html
@@ -44,8 +44,8 @@
     </form>
   </div>
 
-  <div class="forgot-pwd" [routerLink]="['recover']">
-    <p>Esqueceu sua senha?</p>
-    <a>Redefinir senha</a>
+  <div class="forgotPwd" [routerLink]="['recover']">
+    <p class="forgotPwd__text">Esqueceu sua senha?</p>
+    <a class="forgotPwd__btn">Redefinir senha</a>
   </div>
 </div>
