--- a/src/app/public/components/password-recover/password-recover.component.html
+++ b/src/app/public/components/password-recover/password-recover.component.html
@@ -1,8 +1,12 @@
 <div class="login__box">
   <div class="login__box--header">
-    <div class="header-row">
-      <a class="back-btn" [routerLink]="['/']">
-        <img src="../../../../assets/images/back.png" alt="" />
+    <div class="header__box">
+      <a class="box__btn" [routerLink]="['/']">
+        <img
+          class="box__btn--img"
+          src="../../../../assets/images/back.png"
+          alt=""
+        />
       </a>
       <h1 class="header__title">Redefinir Senha</h1>
     </div>
