--- a/src/app/private/components/side-bar/side-bar.component.html
+++ b/src/app/private/components/side-bar/side-bar.component.html
@@ -1,29 +1,29 @@
-<div class="side-menu">
-  <div class="logo">
+<div class="sideMenu">
+  <div class="sideMenu__logo">
     <img src="../../../../assets/images/isa 1.png" alt="" />
-    <p>AudacesManager</p>
+    <p class="sideMenu__logo--font">AudacesManager</p>
   </div>
-  <div class="item" [routerLink]="['dashboard']" routerLinkActive="selected">
+  <div
+    class="sideMenu__dashboard"
+    [routerLink]="['dashboard']"
+    routerLinkActive="selected"
+  >
     Dashboard
   </div>
-  <div class="cadastros">
-    <h4 class="title">Cadastros</h4>
-    <ul class="list">
-      <li class="item" [routerLink]="['colecoes']" routerLinkActive="selected">
-        Coleções
-      </li>
-      <li class="item" [routerLink]="['modelos']" routerLinkActive="selected">
-        Modelos
-      </li>
+  <div class="sideMenu__box">
+    <h4 class="sideMenu__box--title">Cadastros</h4>
+    <ul class="sideMenu__box--list">
+      <li [routerLink]="['colecoes']" routerLinkActive="selected">Coleções</li>
+      <li [routerLink]="['modelos']" routerLinkActive="selected">Modelos</li>
     </ul>
   </div>
 
-  <div class="suporte">
-    <h4 class="title">Suporte</h4>
-    <ul class="list">
-      <li class="item">Obter Ajuda</li>
-      <li class="item">Enviar Comentários</li>
+  <div class="sideMenu__box">
+    <h4 class="sideMenu__box--title">Suporte</h4>
+    <ul class="sideMenu__box--list">
+      <li>Obter Ajuda</li>
+      <li>Enviar Comentários</li>
     </ul>
   </div>
-  <div class="item external logout" [routerLink]="['/']">Logout</div>
+  <div class="sideMenu__logout" [routerLink]="['/']">Logout</div>
 </div>
