--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url(./assets/_styles.scss/login.scss);
+@import url(./assets/_styles.scss/side-bar.scss);
+@import url(./assets/_styles.scss/dashboard.scss);
+@import url(./assets/_styles.scss/table-list.scss);
+@import url(./assets/_styles.scss/form.scss);
+* {
+  font-family: "Inter", sans-serif;
+}
 html,
 body {
   height: 100%;
@@ -7,15 +14,17 @@ body {
 
 body {
   margin: 0;
-  font-family: "Inter", sans-serif;
   color: #6a7090;
 }
-h1 {
-  color: #2c2c2c;
-  font-weight: 600;
+.mat-typography {
+  h1 {
+    font-family: "Inter", sans-serif !important;
+    color: #2c2c2c !important;
+    font-weight: 600 !important;
+  }
 }
 input {
-  width: 25rem;
+  width: 100%;
   height: 3rem;
   border: none;
   border-radius: 0.5rem;
@@ -28,26 +37,7 @@ input::placeholder {
 input:focus {
   outline: 2px solid #5874df;
 }
-select {
-  appearance: none;
-  width: 25rem;
-  height: 3rem;
-  border: none;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  outline: 1px solid #d6dae0;
-  background: url(./assets/images/selectArrow.svg) no-repeat;
-  background-position: 23rem 50%;
-  color: #b4b6c1;
-  cursor: pointer;
-}
-select:focus {
-  outline: 2px solid #5874df;
-}
 
-option {
-  color: #2c2c2c;
-}
 button {
   background-color: #0073cf;
   color: #fbf4f4;
@@ -56,6 +46,7 @@ button {
   font-weight: 600;
   width: 15rem;
   height: 3rem;
+  transition: 0.2s ease-in-out;
 }
 button:hover {
   background-color: #015ca7;
