excluindo scss da pasta components

--- a/src/app/private/components/collections-form/collections-form.component.scss
+++ b/src/app/private/components/collections-form/collections-form.component.scss
@@ -1,56 +1,1 @@
-.container,
-.form__main,
-.form__row,
-.form__row--item,
-.btn__row {
-  display: flex;
-}
-.container {
-  width: 100%;
-  padding: 3rem 0;
-  margin: 0;
-  flex-direction: column;
-  height: 100%;
-}
-.form__header {
-  h1 {
-    font-weight: 600;
-  }
-  margin-bottom: 2rem;
-}
-.form__main {
-  flex-direction: column;
-
-  margin: 0 auto;
-  width: 70%;
-  height: 100%;
-}
-.form__row {
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 1rem;
-  img {
-    margin: 0 auto;
-  }
-}
-.form__row--item {
-  flex-direction: column;
-  row-gap: 0.5rem;
-  height: 75px;
-}
-
-.btn__row {
-  justify-content: flex-end;
-  column-gap: 3rem;
-}
-
-.cancel {
-  background-color: #ebebeb;
-  color: #a098ae;
-}
-.cancel:hover {
-  background-color: #d6d3d3;
-}
-.btn__row {
-  margin-top: 5rem;
-}
+//
