alterando exibição do nome usuário

--- a/src/app/private/components/dashboard/dashboard.component.html
+++ b/src/app/private/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard__container">
   <div class="dashboard__header">
-    <h1>Bem vindo, User</h1>
+    <h1>Bem vindo, <span>User</span></h1>
     <p>Acompanhe a visão geral de suas coleções</p>
   </div>
   <div class="dashboard__card">
