--- a/src/assets/_styles.scss/dashboard.scss
+++ b/src/assets/_styles.scss/dashboard.scss
@@ -9,6 +9,9 @@
   justify-content: space-between;
   margin-top: 0.5rem;
 }
+.dashboard__header p {
+  font-size: 1rem;
+}
 .dashboard__card {
   display: flex;
   justify-content: space-between;
@@ -18,7 +21,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 14px;
+  padding: 10px 0.9rem;
   width: 20%;
   height: 90px;
   background-color: #ebf0fa;
