--- a/src/assets/_styles.scss/side-bar.scss
+++ b/src/assets/_styles.scss/side-bar.scss
@@ -1,9 +1,12 @@
+.sideMenu__container {
+  position: fixed;
+}
 .sideMenu {
-  width: 240px;
+  width: 100%;
   display: flex;
   height: 100vh;
   flex-direction: column;
-  row-gap: 2rem;
+  row-gap: 3rem;
   padding: 2rem;
   border-right: 1px solid #e4e4e4;
   margin: 0;
@@ -18,6 +21,7 @@
 }
 .sideMenu__logo--font {
   font-weight: 600;
+  color: #2c2c2c;
 }
 .sideMenu__box--title {
   color: #b4b6c1;
