--- a/src/assets/_styles.scss/dashboard.scss
+++ b/src/assets/_styles.scss/dashboard.scss
@@ -39,19 +39,26 @@
 .dashboard__main {
   display: flex;
   flex-direction: column;
+  align-items: center;
   row-gap: 3rem;
 }
 .main__header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  width: 100%;
   margin-top: 3rem;
+}
+.dashboard__list {
+  width: 100%;
+  height: auto;
+  margin: auto 0;
 }
 .list__head--row,
 .list__body--row {
   display: flex;
   font-size: 1rem;
   text-align: center;
+  justify-content: space-around;
   border-bottom: 1.5px solid #e4e4e4;
 }
 .list__head--row {
