fix: validação do form

--- a/src/app/public/components/password-recover/password-recover.component.html
+++ b/src/app/public/components/password-recover/password-recover.component.html
@@ -17,9 +17,26 @@
     </p>
   </div>
 
-  <form class="login__box--form">
-    <input class="form__input" type="text" placeholder="Informe seu e-mail" />
+  <form [formGroup]="form" class="login__box--form" #formDir="ngForm">
+    <div class="form__column">
+      <div class="form__column--item">
+        <input
+          formControlName="email"
+          class="form__input"
+          type="text"
+          placeholder="Informe seu e-mail"
+        />
+        <div
+          *ngIf="form.controls['email'].invalid && formDir.submitted"
+          class="errorMsg"
+        >
+          Email inválido
+        </div>
+      </div>
+    </div>
 
-    <button type="submit" class="form__btn">Enviar Recuperação</button>
+    <button (click)="onSubmit()" type="submit" class="form__btn">
+      Enviar Recuperação
+    </button>
   </form>
 </div>
